# Calcul_Parallele

OpenMP/: CMakeLists.txt
OpenMP/EquationChaleur/: CMakeLists.txt  ResolutionEDO.c  ResolutionEDO.h  makefile
OpenMP/NewtonSDL/: CMakeLists.txt  Makefile  SDLgestion.c  SDLgestion.h  complexe.h  fonctions.c  fonctions.h  newton.c
OpenMP/ProduitMatriciel/: CMakeLists.txt  prodMatriciel_dynamic_seq.c  prodMatriciel_dynamic_seq.h  produitMatriciel.c
OpenMP/ProduitScalaire/: CMakeLists.txt  prodScalaire_dynamic_seq.c  prodScalaire_dynamic_seq.h  produitScalaire.c
